RESOLVED FIXED53379
[GTK] REGRESSION: http/tests/media/video-{cookie,referer}.html failing
https://bugs.webkit.org/show_bug.cgi?id=53379
Summary [GTK] REGRESSION: http/tests/media/video-{cookie,referer}.html failing
Gustavo Noronha (kov)
Reported 2011-01-29 13:49:04 PST
This has happened after I landed the patch in this bug: https://bugs.webkit.org/show_bug.cgi?id=50675 I decided to skip them and not to roll it out because there's no code change other than removing #ifdefs, and the paths that remained are the ones we were hitting before. This points towards a change in libsoup being the cause for these failures. Like I said before, I'm skipping them while we investigate.
Attachments
Patch (5.43 KB, patch)
2011-01-31 05:24 PST, Gustavo Noronha (kov)
no flags
Gustavo Noronha (kov)
Comment 1 2011-01-31 05:24:38 PST
Gustavo Noronha (kov)
Comment 2 2011-01-31 05:25:14 PST
As usual, I'm wrong on blaming soup ;D
Xan Lopez
Comment 3 2011-01-31 05:29:56 PST
Comment on attachment 80635 [details] Patch Good catch.
Gustavo Noronha (kov)
Comment 4 2011-01-31 05:59:31 PST
Note You need to log in before you can comment on or make changes to this bug.