2011-01-31  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Xan Lopez.

        [GTK] REGRESSION:  http/tests/media/video-{cookie,referer}.html failing
        https://bugs.webkit.org/show_bug.cgi?id=53379

        Remove left over mentions of HAVE_SOUP_2_29_90, and apply the
        dependency on newer soup to efl as well.

        * Source/cmake/OptionsEfl.cmake:
2011-01-31  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [GTK] REGRESSION:  http/tests/media/video-{cookie,referer}.html failing
        https://bugs.webkit.org/show_bug.cgi?id=53379

        Unskip tests that pass again.

        * platform/gtk/Skipped:
2011-01-31  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        [GTK] REGRESSION:  http/tests/media/video-{cookie,referer}.html failing
        https://bugs.webkit.org/show_bug.cgi?id=53379

        Remove left over #ifdef's. I thought all of the conditional code
        had been freed from the condition, but I forgot to check DRT.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (resetDefaultsToConsistentValues):
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setAlwaysAcceptCookies):

Canonical link: https://commits.webkit.org/67275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77123 268f45cc-cd09-0410-ab3c-d52691b4dbfc