Tools/DumpRenderTree/gtk/DumpRenderTree.cpp
@@ -432,7 +432,6 @@ static void resetDefaultsToConsistentValues()
     WebKitWebBackForwardList* list = webkit_web_view_get_back_forward_list(webView);
     webkit_web_back_forward_list_clear(list);
 
-#ifdef HAVE_LIBSOUP_2_29_90
     SoupSession* session = webkit_get_default_session();
     SoupCookieJar* jar = reinterpret_cast<SoupCookieJar*>(soup_session_get_feature(session, SOUP_TYPE_COOKIE_JAR));
 
@@ -440,7 +439,6 @@ static void resetDefaultsToConsistentValues()
     // HTTP. Should we initialize it earlier, perhaps?
     if (jar)
         g_object_set(G_OBJECT(jar), SOUP_COOKIE_JAR_ACCEPT_POLICY, SOUP_COOKIE_JAR_ACCEPT_NO_THIRD_PARTY, NULL);
-#endif
 
     setlocale(LC_ALL, "");
 
